--- a/.github/workflows/saucedemo.yml
+++ b/.github/workflows/saucedemo.yml
@@ -17,17 +17,14 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      # Run Cypress tests using the official action
-      - name: Run Cypress tests
-        uses: cypress-io/github-action@v6
-        with:
-          runTests: npm run cy:run
+      # Run the full test pipeline (Cypress + Allure generate + Allure open)
+      - name: Run Tests with Allure Reporting
+        run: npm test
 
-      - name: Generate Allure report
-        run: npm run allure:generate
-
+      # Upload Allure report as artifact
       - name: Upload Allure Report Artifact
         uses: actions/upload-artifact@v4
         with:
           name: allure-report
           path: allure-report
+
