--- a/.github/workflows/saucedemo.yml
+++ b/.github/workflows/saucedemo.yml
@@ -14,21 +14,26 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Install dependencies
-        run: npm install
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'  # Use a stable LTS version
 
-      # Run Cypress tests (uses the npm script defined in package.json)
+      - name: Install dependencies
+        run: npm ci  # Use 'npm ci' for consistent, clean installs in CI
+
+      - name: Verify Cypress install
+        run: npx cypress verify
+        # This forces Cypress to download and verify the binary
+
       - name: Run Cypress tests
         run: npm run cy:run
 
-      # Generate Allure report after tests
       - name: Generate Allure report
         run: npm run allure:generate
 
-      # Upload Allure report as GitHub Action artifact
       - name: Upload Allure Report Artifact
         uses: actions/upload-artifact@v4
         with:
           name: allure-report
           path: allure-report
-
