--- a/.github/workflows/saucedemo.yml
+++ b/.github/workflows/saucedemo.yml
@@ -1,22 +1,34 @@
 name: Cypress Tests - Saucedemo
+
 on:
   push:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
+
 jobs:
   cypress-run:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      - name: Install dependencies
-        run: npm install
-      # Run Cypress tests using the official action
-      - name: Run Cypress tests
-        uses: cypress-io/github-action@v6
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
         with:
-          runTests: npm run cy:run
+          node-version: '20'  # Use a stable LTS version
+
+      - name: Install dependencies
+        run: npm ci  # Use 'npm ci' for consistent, clean installs in CI
+
+      - name: Verify Cypress install
+        run: npx cypress verify
+        # This forces Cypress to download and verify the binary
+
+      - name: Run Cypress tests
+        run: npm run cy:run
+
       - name: Generate Allure report
         run: npm run allure:generate
 
@@ -25,4 +37,5 @@ jobs:
         with:
           name: allure-report
           path: allure-report
+
 
