--- a/.github/workflows/saucedemo.yml
+++ b/.github/workflows/saucedemo.yml
@@ -1,4 +1,4 @@
-name: Cypress Tests - Saucedemo
+name: Cypress Screenshots (Even on Pass)
 
 on:
   push:
@@ -7,43 +7,51 @@ on:
     branches: [ "main" ]
 
 jobs:
-  cypress-run:
+  cypress-screenshots:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      # 1. Checkout code
+      - name: Checkout Repository
         uses: actions/checkout@v4
 
+      # 2. Setup Node.js
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20'
 
-      - name: Install dependencies
+      # 3. Install dependencies
+      - name: Install Dependencies
         run: npm ci
 
-      - name: Verify Cypress install
+      # 4. Verify Cypress is installed
+      - name: Verify Cypress
         run: npx cypress verify
 
-      - name: Create required directories
-        run: |
-          mkdir -p screenshots
-          mkdir -p allure-results
+      # 5. Create screenshots directory
+      - name: Create Screenshots Folder
+        run: mkdir -p screenshots
 
-      - name: Run Cypress tests
-        run: npx cypress run
-
-      - name: Check if screenshots were created
+      # 6. Run Cypress tests with screenshot capture
+      - name: Run Cypress & Capture Screenshots
         run: |
-          echo "Listing screenshots:"
+          npx cypress run \
+            --config screenshotsFolder=./screenshots \
+            --config video=false
+
+      # 7. Confirm screenshots were created
+      - name: List Generated Screenshots
+        run: |
+          echo "📸 Generated screenshots:"
           ls -la screenshots/
-          echo "Listing allure-results:"
-          ls -la allure-results/
+          if [ $(ls -A screenshots | wc -l) -eq 0 ]; then
+            echo "❌ Error: No screenshots were saved!"
+            exit 1
+          fi
 
-      - name: Generate Allure Report
-        run: npx allure generate allure-results --clean -o allure-report
-
-      - name: Upload Test Screenshots
+      # 8. Upload screenshots as artifact
+      - name: Upload Screenshots
         uses: actions/upload-artifact@v4
         with:
           name: test-screenshots
