--- a/.github/workflows/saucedemo.yml
+++ b/.github/workflows/saucedemo.yml
@@ -1,4 +1,4 @@
-name: Cypress Screenshots (Even on Pass)
+name: Cypress Tests - Saucedemo
 
 on:
   push:
@@ -7,61 +7,43 @@ on:
     branches: [ "main" ]
 
 jobs:
-  cypress-screenshots:
+  cypress-run:
     runs-on: ubuntu-latest
 
     steps:
-      # 1. Checkout code
-      - name: Checkout Repository
+      - name: Checkout code
         uses: actions/checkout@v4
 
-      # 2. Setup Node.js
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20'
 
-      # 3. Install dependencies
-      - name: Install Dependencies
+      - name: Install dependencies
         run: npm ci
 
-      # 4. Verify Cypress is installed
-      - name: Verify Cypress
+      - name: Verify Cypress install
         run: npx cypress verify
 
-      # 5. Create screenshots directory
-      - name: Create Screenshots Folder
-        run: mkdir -p screenshots
+      - name: Create required directories
+        run: |
+          mkdir -p screenshots
+          mkdir -p allure-results
+          mkdir -p allure-report
 
-      # 6. Run Cypress tests with screenshot capture
-      - name: Run Cypress & Capture Screenshots
+      - name: Run Cypress tests with Allure enabled
         run: |
           npx cypress run \
-            --config screenshotsFolder=./screenshots \
-            --config video=false
+            --config video=false \
+            --env allure=true
 
-      # 7. Confirm screenshots were created
-      - name: List Generated Screenshots
+      - name: Generate Allure HTML Report
         run: |
-          echo "📸 Generated screenshots:"
-          ls -la screenshots/
-          if [ $(ls -A screenshots | wc -l) -eq 0 ]; then
-            echo "❌ Error: No screenshots were saved!"
-            exit 1
-          fi
+          npx allure generate allure-results --clean -o allure-report
 
-      # 8. Upload screenshots as artifact
-      - name: Upload Screenshots
+      - name: Upload Allure HTML Report
         uses: actions/upload-artifact@v4
         with:
-          name: test-screenshots
-          path: screenshots/
-          retention-days: 7
-
-      - name: Upload Allure Report
-        uses: actions/upload-artifact@v4
-        with:
-          name: allure-report
+          name: allure-report-html
           path: allure-report/
           retention-days: 7
-
