--- a/.github/workflows/saucedemo.yml
+++ b/.github/workflows/saucedemo.yml
@@ -20,30 +20,44 @@ jobs:
           node-version: '20'
 
       - name: Install dependencies
-        run: npm ci
+        run: |
+          npm ci
+          npm install -g allure-commandline
 
       - name: Verify Cypress install
         run: npx cypress verify
 
-      - name: Create required directories
-        run: |
-          mkdir -p screenshots
-          mkdir -p allure-results
-          mkdir -p allure-report
+      - name: Create Allure results directory
+        run: mkdir -p allure-results
 
-      - name: Run Cypress tests with Allure enabled
-        run: |
-          npx cypress run \
-            --config video=false \
-            --env allure=true
+      - name: Run Cypress tests
+        run: npx cypress run --config screenshotsFolder=./screenshots
 
-      - name: Generate Allure HTML Report
+      - name: Generate Allure Report
         run: |
-          npx allure generate allure-results --clean -o allure-report
+          allure generate allure-results --clean -o allure-report
+          echo "Allure report generated at: file://$(pwd)/allure-report/index.html"
 
-      - name: Upload Allure HTML Report
+      - name: Upload Allure Report
         uses: actions/upload-artifact@v4
         with:
-          name: allure-report-html
+          name: allure-report
           path: allure-report/
           retention-days: 7
+
+      - name: Show Instructions to Share Report
+        run: |
+          echo "=================================================================================="
+          echo "✅ Allure report is available as artifact: 'allure-report'"
+          echo "✅ Download it from GitHub Actions → Artifacts → allure-report"
+          echo "✅ Extract and run:"
+          echo "      allure open ./allure-report"
+          echo "      OR"
+          echo "      npx http-server allure-report -p 8080"
+          echo ""
+          echo "💡 To share online, run:"
+          echo "    npx localtunnel --port 8080"
+          echo "    and share the URL"
+          echo ""
+          echo "🌐 Example shared URL: https://your-name-report.localtunnel.me"
+          echo "=================================================================================="
